stop tables from overflowing body

--- a/ScavHunt/scss/custom.scss
+++ b/ScavHunt/scss/custom.scss
@@ -7,6 +7,10 @@ $primary: #DEA635;
 $secondary: #F5EDE3;
 $interactable: #E6AF57;
 
+.content {
+    overflow-x: scroll;
+}
+
 .sidebar {
     background-color: $primary;
 }
